--- a/sass/elements/_forms.scss
+++ b/sass/elements/_forms.scss
@@ -15,7 +15,7 @@ select {
   width: 100%;
   max-width: 100%;
   margin-bottom: 0;
-  display: inline-block;
+  display: block;
   border: 1px solid $input-border-color;
   padding: quarter($line-height__small) half($line-height__small);
 
